--- a/07 - Order Confirm/style.css
+++ b/07 - Order Confirm/style.css
@@ -53,7 +53,7 @@ body{
 .confirm__select-left{
     margin-right: 30px;
 }
-.confirm__select-right{}
+/* .confirm__select-right{} */
 input[type="radio"]{
     color: rgba(0, 122, 255, 1);
 }
