--- a/14 - Product Details/style.css
+++ b/14 - Product Details/style.css
@@ -18,9 +18,9 @@ body{
     text-align: right;
     margin-bottom: 20px;
 }
-.product__details-product{
+/* .product__details-product{
 
-}
+} */
 .product__details-img{
     background-color: #f2f3f9;
     text-align: center;
